	  us the entire fix.
	* src/draw-context.cpp: Investigated patch 934351 from cth103.  Applied a
	  slight variation to conform to the function calling styles of that code.
	* configure.in: Implemented gcc version test for >= 3.0.0
	* src/file.cpp, src/interface.cpp, share/icons/icons.svg, src/verbs.cbb:
	  finished "File / Revert" implementation.  Found a memory leak in
      "file_save".
	* src/main.cpp, src/file.h, src/file.cpp: removed redundant code, implemented
	  in "sp_file_open".

2004-04-13  Kees Cook <kees@outflux.net>

	* tools-version.sh: added a possible fix for BSDish tools.
	* configure.in, share/patterns/Makefile.am: inkscape janitor strikes
	  again!  This is a quick cleanup to Ted's new directories.  Looks
	  like "patterns" got left out.
	* share/clipart/.cvsignore, share/templates/.cvsignore,
	  share/examples/.cvsignore, share/fonts/.cvsignore,
	  share/gradients/.cvsignore, share/keyboards/.cvsignore,
	  share/palettes/.cvsignore, share/patterns/.cvsignore:
	  Added Makefile build-cruft to .cvsignores.
	* src/helper/unit-menu.cpp: applied a variation to patch 934358 from cth103
	  to fix grid unit changing bug.
	* configure.in: fixed capitalization of "libpng" to avoid confusion.
	* src/sp-namedview.cpp, src/document.cpp, src/document.h, src/file.cpp,
	  src/file.h, src/document-undo.cpp, src/interface.cpp, src/verbs.cpp,
	  src/verbs.h:
	  Newly opened files will only create new windows if the current document
	  is untouched.  (RFE#928517)
	  Added support for future "File/Revert" handling.  Needs
	  a little more support in the SPDocument structure.  See notes in
      "src/file.cpp", function "sp_file_revert_dialog".

2004-04-13  Ted Gould <ted@gould.cx>

	* configure.in, share/Makefile.am, share/clipart/Makefile.am,
      share/examples/Makefile.am, share/fonts/Makefile.am
      share/gradients/Makefile.am, share/keyboards/Makefile.am
      share/markers/Makefile.am, share/palettes/Makefile.am